# receipts_parser_poc

./: .gitignore  README.md  llm_receipt.py  ocr_parsing.py  parse_folder_with_paddleocr.py  pyproject.toml
src/receipts_parser_poc/: __init__.py  cli.py  llm_receipt.py  ocr_parsing.py  timing.py
